# ftj-pyjexl-extended

./: .gitignore  package-lock.json  package.json  pyproject.toml
.circleci/: config.yml
.github/workflows/: publish-pypi.yml
pyjexl/: extended_grammar.py  jexl_extended.py
pyjexl/js/: amount.js  amount.ts  test.js  test.ts
tests/: test_extended_grammar.py  test_jexl.py
