[tool.poetry]
name = "ftj-pyjexl-extended"
version = "0.2.2"
description = "A JEXL parser and evaluator with extended grammar (80+ built-in functions and transforms)."
readme = "README.md"
authors = ["nikoraes <niko.raes@gmail.com>", "Sumeet Mulay <sumeet@freedomtax.jp>"]
license = "MIT"
keywords = ["jexl", "expression", "parser", "grammar", "extended"]
packages = [{include = "pyjexl"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
parsimonious = "*"
future = "*"
python-dateutil = "*"
pytz = "*"
pythonmonkey = "^1.3.1"


[tool.poetry.urls]
Homepage = "https://github.com/konnektr-io/pyjexl-extended"
Repository = "https://github.com/konnektr-io/pyjexl-extended"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "hypothesis (>=6.152.8,<7.0.0)"
]
